--- a/MyProject-master/src/app/Login/login.component.html
+++ b/MyProject-master/src/app/Login/login.component.html
@@ -3,28 +3,26 @@
     <!--<div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">-->
     <div class="col-xs-12 col-sm-10 cols-md-8 cols-sm-offset-1 cols-md-offset-2">
 
-    <form  (ngSubmit)="getDetails()" #f="ngForm" >
+    <form  (ngSubmit)="getDetails()" [formGroup]="signUpForm">
   <!--<h3 class="ui header" class="text-center">Login</h3>-->
 
-  <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
+  <!--<div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">-->
        <!--ngModelGroup="userData"-->
        <!--#userData="ngModelGroup">-->
+      <div formGroupName="userData">
     <div class="row">
-      <div class="col-sm-10">
-        <p class="colour">{{messageError}}</p>
-      </div>
-    </div>
-    <div class="row">
+
   <div class=" col-sm-10  form-group">
     <label for="email" >Username</label>
     <input type="email"
            id="email"
            class="form-control"
-           ngModel
-           name="email"
-           required
-            #email="ngModel">
-    <span class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</span>
+           formControlName="email"
+           name="email">
+    <span *ngIf="!signUpForm.get('userData.email').valid && signUpForm.get('userData.email').touched"
+      class="help-block">
+    <span *ngIf="signUpForm.get('userData.email').errors['required']"> The field is required</span>
+    Please enter a valid email</span>
   </div>
     </div>
 
@@ -34,13 +32,13 @@
         <input type="password"
                id="password"
                class="form-control"
-               ngModel
-               name="password"
-               required
-               #password="ngModel">
-    <span class="help-block" >You can't leave password field empty</span>
+               formControlName="password"
+               name="password">
+    <span *ngIf="!signUpForm.get('userData.password').valid && signUpForm.get('userData.password').touched"
+          class="help-block">Please enter a valid password</span>
   </div>
   </div>
+    </div>
 
     <!--<div class="row">-->
       <!--<div class="col-xs-12">-->
@@ -61,20 +59,21 @@
       <!--</div>-->
     <!--</div>-->
     <hr>
-  </div>
+  <!--</div>-->
       <div class="row">
         <div class="col-sm-10">
   <button type="submit"
-          class="btn btn-primary"
-          [disabled]="!f.valid" >Sign in</button>
+          class="btn btn-primary" [disabled]="!signUpForm.valid" ]>Sign in</button>
           <a [routerLink]="['/pp-get-all-products']" class="btn btn-link">Sign-Up?</a>
       </div>
       </div>
       <hr>
-      <button mat-raised-button (click)="onCreate()">
-        <mat-icon>add</mat-icon>
-      </button>
+      <!--<button mat-raised-button (click)="onCreate()">-->
+        <!--<mat-icon>add</mat-icon>-->
+      <!--</button>-->
 
+      <span *ngIf="!signUpForm.valid && signUpForm.touched"
+            class="help-block">Please enter a valid Data</span>
 
 </form>
       <hr>
