--- a/MyProject-master/src/app/app.component.html
+++ b/MyProject-master/src/app/app.component.html
@@ -4,12 +4,12 @@
     <div [class.Header]="!fixed" [class.Header2]="fixed">
       <div class="container-fluid">
         <div class="d-flex" fxLayout="row">
-  
+
           <div fxLayout.xs="column" fxLayout.sm="column" fxFlex="70%" fxLayoutGap.xs="1">
             <div class="px-3" fxLayout.xs="column">
               <h2>Logo</h2>
             </div>
-  
+
             <div class="px-3 d-flex" fxFlex="40%" fxFlex.xs="100%" fxLayoutAlign="end" fxLayoutAlign.sm="start streach" fxLayoutAlign.xs="start streach">
               <div class="search">
                 <form [formGroup]="searchForm">
@@ -41,7 +41,7 @@
               </ul>
             </div>
           </div>
-        
+
         </div>
       </div>
     </div>
@@ -54,16 +54,16 @@
         </div>
       </div>
     </div>
-    <div [class.header-Panel]="!fixed"fxLayout.xs="column"  fxFlex="100%"  [class.fixed]="fixed">
-      <div >
-        <h2 style="color:rgb(44, 41, 41)">Welcome back {{name}}</h2> 
-      </div>
-    
-    </div>
-  
+    <!--<div [class.header-Panel]="!fixed"fxLayout.xs="column"  fxFlex="100%"  [class.fixed]="fixed">-->
+      <!--<div >-->
+        <!--<h2 style="color:rgb(44, 41, 41)">Welcome back {{name}}</h2> -->
+      <!--</div>-->
+    <!---->
+    <!--</div>-->
+
   </div>
-  
-  
+
+
   <!-- header ends here -->
 
 <!--<div class="container">-->
