--- a/MyProject-master/src/app/Login/login.component.html
+++ b/MyProject-master/src/app/Login/login.component.html
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-sm-10">
   <button type="submit"
-          class="btn btn-primary" [disabled]="!signUpForm.valid" ]>Sign in</button>
+          class="btn btn-primary" [disabled]="!signUpForm.valid">Sign in</button>
           <a [routerLink]="['/pp-get-all-products']" class="btn btn-link">Sign-Up?</a>
       </div>
       </div>
