added dialog box

--- a/MyProject-master/src/app/app.component.html
+++ b/MyProject-master/src/app/app.component.html
@@ -146,6 +146,7 @@
     <a  fxLayout.xs="column" routerLink="/kids"><div class="social-icon-container"><span>Kids</span></div></a>
     <a  fxLayout.xs="column" routerLink="/about-us"><div class="social-icon-container"><span>About</span></div></a>
   </div>
+  <!-- <app-my-navbar></app-my-navbar> -->
 
   <!-- <div class="social-container">
     <a href="#"><div class="social-icon-container">Hom'e</div></a>
@@ -158,6 +159,8 @@
     <i class="fa fa-instagram" aria-hidden="true"></i>
   </div>
 </div>
+
+
 
 
 <!--<app-home></app-home>-->
