--- a/MyProject-master/src/app/my-navbar/my-navbar.component.html
+++ b/MyProject-master/src/app/my-navbar/my-navbar.component.html
@@ -11,10 +11,12 @@
       <a [routerLink]="['/editUserComponent']" class=" btn btn-primary">View My Profile</a>
       <hr>
       <a [routerLink]="['']" class="btn btn-primary">Update My Profile</a>
-      <a mat-list-item href="#">View Cart</a>
+      <hr>
+      <a [routerLink]="['']" class="btn btn-primary">View Cart</a>
+      <!-- <a mat-list-item href="#">View Cart</a> -->
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <!-- <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -27,6 +29,6 @@
       <span>My Dashboard</span>
     </mat-toolbar>
     <!-- Add Content Here -->
-  </mat-sidenav-content>
+  <!-- </mat-sidenav-content> --> -->
 </mat-sidenav-container>
 
