--- a/MyProject-master/src/app/edit-user/edit-user.component.html
+++ b/MyProject-master/src/app/edit-user/edit-user.component.html
@@ -8,17 +8,25 @@
     <div class="col-xs-12 col-sm-10 cols-md-8 cols-sm-offset-1 cols-md-offset-2">
       <form (ngSubmit)="onSubmit()">
         <!--<h3 class="ui header" class="text-center">Register</h3>-->
+        
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group">
               <span>Email:</span>
             </div>
+             
           </div>
           <div class="col-sm-6">
             <div class="form-group">
               <span>First Name:</span>
             </div>
           </div>
+
+          <div class="col-sm-6">
+              <div class="form-group">
+                //<div><h4>{{email}}</h4></div>
+              </div>
+            </div>
         </div>
 
         <div class="row">
@@ -36,12 +44,17 @@
         <br>
         <div class="row">
           <div class="col-sm-6">
-            <span>Title:</span>
+            <div class="form-group">
+                <span>Title:</span>
+            </div>
+            
             <br>
           </div>
 
           <div class="col-sm-6">
+            <div class="form-group">
             <span>Gender:</span>
+          </div>
             <br>
 
           </div>
@@ -49,6 +62,7 @@
 
         <br>
         <button class="btn btn-primary">Update</button>
+        
 
       </form>
     </div>
