--- a/MyProject-master/src/app/send-code/send-code.component.html
+++ b/MyProject-master/src/app/send-code/send-code.component.html
@@ -2,10 +2,10 @@
   <div style="text-align: center; margin: 30px;">
     <h4>Enter your code to finish up registartion</h4>
     <p>
-      <input class="k-textbox" placeholder="Your code here" style="width: 300px;" />
+      <input type="number" class="k-textbox" placeholder="Your code here" style="width: 300px;"  #code />
     </p>
     <p>
-      <button kendoButton primary="true" style="width: 300px;">Send Code</button>
+      <button type="submit" kendoButton primary="true" style="width: 300px;" (click)="submitCode(code.value)">Send Code</button>
     </p>
     <a href="#">No thanks!</a>
   </div>
